--- a/csv/css/homebox.css
+++ b/csv/css/homebox.css
@@ -26,32 +26,43 @@ p {
 color: #666;
 padding: 0 0 10px 0;
 }
-td a{
-text-decoration: none;
-color: #4a6652;
-font-weight: bold;
-}
 header{
-    width: 90%;
+    width: 85vw;
     float: right;
+    height: 22vh;
+}
+body{
+    margin: 0;
 }
 
+/*
+Some nav shit
+*/
 nav{
-    width: 10%;
+    width: 14vw;
     height:100vh;
     float: left;
+}
+nav p{
+    text-align: center;
+    margin-top: 17%;
 }
 ul{
     padding: 0;
     list-style-type: none;
 }
 li{
+    text-align: center;
+    margin-bottom: 10px;
+    padding: 10px;
+    color: #adffd7;
+    text-decoration: none;
     background-color: #5c7f67;
     border-radius: 10px;
-    margin: 5px;
-    color: #adffd7;
-    padding: 10px 20px;
-    text-align: center;
+    width: 70%;
+    font-family: sans-serif;
+    margin: auto;
+
 }
 li :hover{
     background-color: #4a6652;
@@ -59,29 +70,62 @@ li :hover{
 li a{
     color: #adffd7;
     text-decoration: none;
-    font-weight: bold;
 }
-.navcontents{
+li #icon{
+    height: 100%;
+    aspect-ratio: 1/1;
+}
+#logo{
+    width: 100%;/*edit logo nav size by editing #image margin left and right*/
+    aspect-ratio: 1/1;
     margin: auto;
-}
-.navcontents p{
-    margin: auto;
-    width: 50%;
-}
-.imgage{
-margin: auto;
-width: 5%;
-height: 5%;
-}
-.logo{
-    margin: auto;
-    width: 5%;
-    height: 5%;
     }
+#image{
+    margin-left: 33%;
+    margin-right: 33%;
+}
+
+/*
+Counters stuff
+*/
+#counters h3{
+    text-align: left;
+    margin-bottom: 0;
+    margin-left: 5.5%;
+}
+#counters #spacing-lr{
+    width: 15%;
+    height: 3vw;
+    float: left;
+}
+#counters #spacing{
+    width: 14%;
+    float: left;
+    height: 3vw;
+}
+#counter{
+    background-color: #2c2e27;
+    border-radius: 10px;
+    padding: 1%;
+    width: 12%;
+    float: left;
+    margin-bottom: 30px;
+}
+#counter #text{
+    color: #d8dcc2;
+    padding: 0;
+    margin: 0;
+}
+#counter #amount{
+    color: #d8dcc2;
+    padding: 5px 0 0 0; /* top right bottom left*/
+    margin: 0;
+    font-weight: bold;
+    font-size: x-large;
+}
 /*
 Table stuff
 */
-
 table {
 border-collapse: collapse;
 margin: 25px 0;
@@ -89,7 +133,7 @@ font-size: 0.9em;
 box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 margin-left: auto;
 margin-right: auto;
-max-width: 100%;
+width: 70%;
 }
 thead tr {
 background-color: #1e0606;
@@ -102,6 +146,20 @@ padding: 12px 15px;
 tr {
 border: 1px solid #e6e6e6;
 }
+td a{
+    text-decoration: none;
+    color: #4a6652;
+    font-weight: bold;
+}
+tr:hover{
+    background-color: #cfcfcf;
+}
+tr th:hover{
+    background-color: #1e0606;
+}
+#collum :hover{
+    background-color: #1e0606;
+}
 /*
 tr:last-of-type {
 border-bottom: 2px solid #e6e6e6;
@@ -113,7 +171,7 @@ Some layout stuff
 */
 
 .container {
-width: 90%;
+width: 85vw;
 text-align: center;
 float: right;
 margin: -37px 0 0 0;
