H3 Quick Statistics margin to counters itself

--- a/csv/css/homebox.css
+++ b/csv/css/homebox.css
@@ -91,7 +91,7 @@ Counters stuff
 */
 #counters h3{
     text-align: left;
-    margin-bottom: 0;
+    margin-bottom: 8px;
     margin-left: 5.5%;
 }
 #counters #spacing-lr{
